--- a/links.html
+++ b/links.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel = "stylesheet" type = "text/css" href = "/html/linksStyling.css"> <!-- change inline styling to CSSfile after edits are made to HTML -->
         <title>
             Helpful Links
         </title>
