--- a/founder.html
+++ b/founder.html
@@ -10,6 +10,7 @@
     <body style="text-align: center; font-family: Times New Roman; background-color: thistle">
 <h1 style="color: steelblue;">About ME</h1>
 <hr><hr>
+background-image: url('background.jpg');
 <h2 style="font-family: 'Dancing Script', cursive; color:#c1ebea"> Lujaina Eldelebshany</h2>
 <h3>I am an advocate for women's
 rights and hope that this website will do a number of things for the community,
@@ -23,48 +24,45 @@ breaking stereotypes around women. </h3>
 <h2 style="color: maroon;">A Bit about Myself Personally</h2>
 <p style="font-size: 20px; color: darkslategray;"><i>
     <ul>
-        <li>Incoming Engineering student at the University of Calgary</li>
+        <li>Small person with big dreams </li>
+        <li>Incoming Engineering student at the <b>University of Calgary</b></li>
         <li>Enjoys baking and playing card games </li>
-        <li>Working on developing my personal website</li>
+        <li>Working hard to developing my personal website</li>
         <li>Constantly lives in a state of stress</li>
     </ul>
 </i></p>
 </section>
 
 
-<img style="width: 300px; length: 300px;"src="sp1.jpg" alt="A picture of my work. You are experiencing a loading error, please stand by and check connection">
 
-<p style="font-size: 16px;">This photo was taken in Cairo, Egypt, at the sunset form a neighbourhood compound. It captures the subtly calming and cozy energy. I especially like this
+    <img src="sp1.jpg" alt="A picture of my work. You are experiencing a loading error, please stand by and check connection" style="float: left; height: 15em; margin-right: 1%; margin-bottom: 0.5em;">
+    <img src="sp2.jpg" alt="Please stand by and check connection" style="float: left; height: 15em; margin-right: 1%; margin-bottom: 0.5em;">
+    <img src="sp3.JPG" alt="Please stand by and check connection" style="float: left; height: 15em; margin-right: 1%; margin-bottom: 0.5em;">
+    <img src="sp4.jpg" alt="Please stand by and check connection" style="float: left; height: 15em; margin-right: 1%; margin-bottom: 0.5em;">
+
+<!-- <p>Cairo, Egypt</p>  -->
+<!-- <p>WHitefish, USA</p> -->
+<!-- <p>Vancouver, Tofino</p> -->
+<!-- <p>Tofino, Tofino</p> -->
+
+
+<p style="clear: both;">
+<p style="font-size: 16px;">The first photo was taken in Cairo, Egypt, at the sunset form a neighbourhood compound. It captures the subtly calming and cozy energy. I especially like this
 photo because s a contry in the Middle East, it is often overlooked as a country in poverty or a country whose only contribution to society is producing terrorists.
 I think it is important to capture the life that Egypt actually is, and to, again, provide some perspective from a seemingly normal moment in the peaceful evening
 to those who seem to be fixated on their image of my home country. </p>
 
 <section>
-<img style="width: 300px; length: 300px;"src="sp2.jpg" alt="A second picture of my work. You are experiencing a loading error, please stand by and check connection">
 
-<p style="font-size: 16px;">This second photo, I had taken last year during a road trip to Montana, America. Though not focussing on my theme of 'perspective' much, I enjoyed editting this
-photo as it had shone through with many of the pretty colours that I would have never so vibrantly noticed before. The purpose of this photo being chosen as a
-representation for the rest fof my work is because of that fact itself. That when I editted my work and saw that the colors changed and the colours within the
-pebbles in the river turned shimmering hues of blues and pinks, I couldn't help but wonder how mnay people had overlooked this beauty. The colours weren't added
-with my editing, I simply applied filters to bring out certain colours over the rest. My choosing to focus on the colours of tones within a peacfully running stream,
-I was able to make that the centrepeice of the photorgaph. Similarly to the issue of women's rights, wth all the global issues happening in the world right now,
-the issues with gender equality seem minor, or less important. To that, I disagree completely. I say that wit all the issues in the world right now,wehould
-address all of them! I recognize that there are many non-prot organizations much more intensely focussed on each of these issues, gender equality included.
-But with the sheer amount of people that are concerned about these humanitarian crises, <b>it still is NOT ENOUGH.</b> There are still people who are not educated
-in the world, and like the stones in the river, we need to sharpen our focus and filter our work to focus to educating and spreading this critical knowdledge
-to everyone so that each person can have an impact. The power of one is limited, but the power of many combined is overpowering. Any system can be overthrown
-and any revolution and change of societal values can be changed if enough people are educated and enough people care to make a change, so we all must focus on
-educating, regardless of how repetitve it may seem to do so. </p>
+
 </section>
 <a href="https://www.linkedin.com/in/lujaina-eldelebshany-0029bb1b3/"> <img alt="error-code.jpg" src="linkedin_logo.png"
          width=30" height="30">
       </a>
-<a href="https://github.com/Lujaina-E"> <img alt="error-code.jpg" src="github_logo.png"
+<a href="https://github.com/Lujaina-E"> <img alt="error-code.jpg" src="github.png"
          width=30" height="30">
       </a>
 
-<section>
-</section>
 
     </body>
 
