--- a/founder.html
+++ b/founder.html
@@ -7,10 +7,11 @@
         <title>Founder</title
     </head>
     <h4 style="text-align: left;"><a href="indexing.html">Back to main</a></h4>
-    <body style="text-align: center; font-family: Times New Roman; background-color: thistle">
+    <body style="text-align: center; font-family: Times New Roman; background-image: url('backdrop.jpg'); background-repeat: no-repeat; background-position: center center; background-size: cover; background-attachment: fixed;">
+
 <h1 style="color: steelblue;">About ME</h1>
 <hr><hr>
-background-image: url('background.jpg');
+
 <h2 style="font-family: 'Dancing Script', cursive; color:#c1ebea"> Lujaina Eldelebshany</h2>
 <h3>I am an advocate for women's
 rights and hope that this website will do a number of things for the community,
@@ -35,7 +36,7 @@ breaking stereotypes around women. </h3>
 
 
 
-    <img src="sp1.jpg" alt="A picture of my work. You are experiencing a loading error, please stand by and check connection" style="float: left; height: 15em; margin-right: 1%; margin-bottom: 0.5em;">
+    <img src="sp1.jpg" alt="A picture of my work. You are experiencing a loading error, please stand by and check connection" style="padding-left: 85px; float: left; height: 15em; margin-right: 1%; margin-bottom: 0.5em;">
     <img src="sp2.jpg" alt="Please stand by and check connection" style="float: left; height: 15em; margin-right: 1%; margin-bottom: 0.5em;">
     <img src="sp3.JPG" alt="Please stand by and check connection" style="float: left; height: 15em; margin-right: 1%; margin-bottom: 0.5em;">
     <img src="sp4.jpg" alt="Please stand by and check connection" style="float: left; height: 15em; margin-right: 1%; margin-bottom: 0.5em;">
@@ -48,21 +49,25 @@ breaking stereotypes around women. </h3>
 
 <p style="clear: both;">
 <p style="font-size: 16px;">The first photo was taken in Cairo, Egypt, at the sunset form a neighbourhood compound. It captures the subtly calming and cozy energy. I especially like this
-photo because s a contry in the Middle East, it is often overlooked as a country in poverty or a country whose only contribution to society is producing terrorists.
-I think it is important to capture the life that Egypt actually is, and to, again, provide some perspective from a seemingly normal moment in the peaceful evening
-to those who seem to be fixated on their image of my home country. </p>
+photo because as a country in the Middle East, it is often overlooked as a contribution to global poverty. I think it is important to capture the life that Egypt actually is, and to, again,
+provide some perspective from a seemingly normal moment in the peaceful evening to those who seem to be fixated on their image of my home country. </p>
 
 <section>
 
-
-</section>
 <a href="https://www.linkedin.com/in/lujaina-eldelebshany-0029bb1b3/"> <img alt="error-code.jpg" src="linkedin_logo.png"
          width=30" height="30">
       </a>
 <a href="https://github.com/Lujaina-E"> <img alt="error-code.jpg" src="github.png"
          width=30" height="30">
+
+<a href="https://substack.com/profile/24893981-lujaina-eldelebshany"> <img alt="error-code.jpg" src="substack_logo.png"
+         width=30" height="30">
+
       </a>
 
+</section>
+
+<!-- Add a section here for an email subscription to my substack -->
 
     </body>
 
