--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <style>
         @import url('https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&display=swap');
         </style>
-        <title>indexing</title>
+        <title>Index</title>
     </head>
     <body>
         
