--- a/founder.html
+++ b/founder.html
@@ -6,7 +6,7 @@
         </style>
         <title>Founder</title
     </head>
-    <h4 style="text-align: left;"><a href="indexing.html">Back to main</a></h4>
+    <h4 style="text-align: left;"><a href="index.html">Back</a></h4>
     <body style="text-align: center; font-family: Times New Roman; background-image: url('backdrop.jpg'); background-repeat: no-repeat; background-position: center center; background-size: cover; background-attachment: fixed;">
 
 <h1 style="color: steelblue;">About ME</h1>
