--- a/gendernorms.html
+++ b/gendernorms.html
@@ -3,7 +3,7 @@
     <head>
         <title>gendernorms</title>
     </head>
-    <h4 style="text-align: left;"><a href="indexing.html">Back to main</a></h4>
+    <h4 style="text-align: left;"><a href="index.html">Back</a></h4>
     <body style="font-family: Times New Roman; text-align: center; background-color: lavenderblush;">
         <h1 style="color: mediumslateblue;">GENDER NORMS-ANCIENT INEQUALITY</h1>
             <img style="width: 300px; length: 300px;"src="ballerina.jpg" alt="Please stand by and restart the page while you experience this error.">
