--- a/links.html
+++ b/links.html
@@ -6,7 +6,7 @@
             Helpful Links
         </title>
     </head>
-    <h4 style="text-align: left;"><a href="indexing.html">Back to main</a></h4>
+    <h4 style="text-align: left;"><a href="index.html">Back</a></h4>
     <body style="background-color: oldlace; text-align: center;">
     <h1 style="color: skyblue;"> Here are a bunch of links to helpful TED-Ed talks that further discuss these very pressing issues!</h1> <hr>
     <img style ="width: 450px; length: 450px;"src="women.jpg" alt="Please stand by. Your computer is experiencing some loading issues, refresh the page and retry">
