--- a/masculinity.html
+++ b/masculinity.html
@@ -3,7 +3,7 @@
     <head>
         <title>masculinity</title>
     </head>
-    <h4 style="text-align: left;"><a href="indexing.html">Back to main</a></h4>
+    <h4 style="text-align: left;"><a href="index.html">Back</a></h4>
     <body style="font-family: Times New Roman; text-align: center; background-color: aliceblue;">
         <h1 style="color: firebrick; font-family: Courier New;">TOXIC MASCULINITY</h1>
         <h2 style="font-family: Courier New; color: DarkKhaki;">What is Toxic masculinity?</h2>
