--- a/gallery.html
+++ b/gallery.html
@@ -100,6 +100,11 @@
         <form>
             <p>Do you have any more ideas for influential female leaders that you would like to see up on my gallery? Fill out the form, and I'll be able to see your responses!</p><input type="Leader name">
             <input type="submit" value="Submit Form">
+            
+            <!-- Input form... -->
+            <!-- Change the format of these people to be article style -->
+
+
         </form>
     </div>
 </html>
