--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-        <link rel = "stylesheet" type = "text/css" href = "/html/indexingStyle.css">
+        <link rel = "stylesheet" type = "text/css" href = "/html/indexStyle.css">
         <style>
         @import url('https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&display=swap');
         </style>
