--- a/index.html
+++ b/index.html
@@ -2,33 +2,34 @@
 <html lang="en">
     <head>
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-        <link rel = "stylesheet" type = "text/css" href = "/html/indexStyle.css">
         <style>
         @import url('https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&display=swap');
         </style>
         <title>Index</title>
     </head>
-    <body>
+    <body style="font-family: 'Times New Roman', cursive; text-align: center; background-color: linen">
         
-        <h1>Gender Setbacks</h1> <hr> <hr>
+        <h1 style="color: darkslateblue; font-family: 'Akaya Kanadaka', cursive;">Gender Setbacks</h1> <hr> <hr>
         <img style="width: 300px; length: 300px;"src="fem.jpg" alt="Please stand by and restart the page while you experience this error.">
         <div class="alert alert-primary" role="alert">Check out the links at the bottom of this page!</div>
             
             <main> 
-            <h2 id="subtitle">A blog intended to bridge the gap between ignorance and victimizing to shine light on pressing issue of gender norms and reality</h2><hr>
-            <h3 id="intention"><b>I wanted to launch this blog mainly because in a world where everything is happening so quickly and
+            <h2 style="color: maroon;">A blog intended to bridge the gap between ignorance and victimizing to shine light on pressing issue of gender norms and reality</h2><hr>
+            <h3 style="color: rosybrown;"><b>I wanted to launch this blog mainly because in a world where everything is happening so quickly and
             improper behviour is often overlooked at a time like this, I wanted to bring together accounts and research of
             female empowerment to push forth the delving into important topics surrounding the treatment of women, sexual harassment,
             female empowerment in the workspace to really show just how beneficial it is to society to shatter the stereotypes regarding
             what women should and shouldn't do.</h3></b>
             <img style="width: 300px; length: 300px;" src="fem.jpg" alt="Loading error, please stand by and check connection">
-            <h4>Who AM I? Please click <a href="founder.html"> here </a> to learn more about me and why I chose to do this.</h4>
-            <h4>Helpful links to TED-ED talks discussing these inequalities can be reached through<a href="links.html"> this </a>link.</h4>
-            <h4>Click <a href="gendernorms.html">here</a> to see what I have to say about gender norms.</h4>
-            <h4>Click <a href="masculinity.html">here</a> to learn more about toxic masculinity: what it is, how it came to be, and why it
+            <h4 style="color: midnightblue;">Who AM I? Please click <a href="founder.html"> here </a> to learn more about me and why I chose to do this.</h4>
+            <h4 style="color: midnightblue;">Helpful links to TED-ED talks discussing these inequalities can be reached through<a href="links.html"> this </a>link.</h4>
+            <h4 style="color: midnightblue;">Click <a href="gendernorms.html">here</a> to see what I have to say about gender norms.</h4>
+            <h4 style="color: midnightblue;">Click <a href="masculinity.html">here</a> to learn more about toxic masculinity: what it is, how it came to be, and why it
             is such a critical issue to discuss when talking about feminism.</h4>
-            <h4>Click <a href="gallery.html">here</a> to view my gallery of successful women for a sense of inspiration.</h4>
+            <h4 style="color: midnightblue;">Click <a href="gallery.html">here</a> to view my gallery of successful women for a sense of inspiration.</h4>
             </main>
               <footer> &copy; Lujaina Eldelebshany 2021</footer>
     </body>
 </html>
+
+
