--- a/founder.html
+++ b/founder.html
@@ -9,7 +9,7 @@
     <h4 style="text-align: left;"><a href="index.html">Back</a></h4>
     <body style="text-align: center; font-family: Times New Roman; background-image: url('backdrop.jpg'); background-repeat: no-repeat; background-position: center center; background-size: cover; background-attachment: fixed;">
 
-<h1 style="color: steelblue;">About ME</h1>
+<h1 style="color: #410d00;">About ME</h1>
 <hr><hr>
 
 <h2 style="font-family: 'Dancing Script', cursive; color:#c1ebea"> Lujaina Eldelebshany</h2>
