--- a/index.html
+++ b/index.html
@@ -5,21 +5,25 @@
         <style>
         @import url('https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&display=swap');
         </style>
-        <title>Index</title>
+        <title>indexing</title>
     </head>
-    <body style="font-family: 'Times New Roman', cursive; text-align: center; background-color: linen">
-        
-        <h1 style="color: darkslateblue; font-family: 'Akaya Kanadaka', cursive;">Gender Setbacks</h1> <hr> <hr>
+    <body style="font-family: 'Times New Roman', cursive; text-align: center; font-family: Times New Roman; background-image: url('backdrop.jpg'); background-repeat: no-repeat; background-position: center center; background-size: cover; background-attachment: fixed;">
+
+
+        <h1 style="color: #fdc4c4; font-family: 'Akaya Kanadaka', cursive;">Gender Setbacks</h1> <hr> <hr>
         <img style="width: 300px; length: 300px;"src="fem.jpg" alt="Please stand by and restart the page while you experience this error.">
         <div class="alert alert-primary" role="alert">Check out the links at the bottom of this page!</div>
-            
-            <main> 
-            <h2 style="color: maroon;">A blog intended to bridge the gap between ignorance and victimizing to shine light on pressing issue of gender norms and reality</h2><hr>
-            <h3 style="color: rosybrown;"><b>I wanted to launch this blog mainly because in a world where everything is happening so quickly and
-            improper behviour is often overlooked at a time like this, I wanted to bring together accounts and research of
-            female empowerment to push forth the delving into important topics surrounding the treatment of women, sexual harassment,
-            female empowerment in the workspace to really show just how beneficial it is to society to shatter the stereotypes regarding
-            what women should and shouldn't do.</h3></b>
+
+            <main>
+            <section>
+                <h2 style="color: maroon;">A blog intended to bridge the gap between ignorance and victimizing to shine light on pressing issue of gender norms and reality</h2><hr>
+                <h3 style="color: #3b3b3b;"><b>I wanted to launch this blog mainly because in a world where everything is happening so quickly and
+                improper behviour is often overlooked at a time like this, I wanted to bring together accounts and research of
+                female empowerment to push forth the delving into important topics surrounding the treatment of women, sexual harassment,
+                female empowerment in the workspace to really show just how beneficial it is to society to shatter the stereotypes regarding
+                what women should and shouldn't do.</h3></b>
+            </section>
+
             <img style="width: 300px; length: 300px;" src="fem.jpg" alt="Loading error, please stand by and check connection">
             <h4 style="color: midnightblue;">Who AM I? Please click <a href="founder.html"> here </a> to learn more about me and why I chose to do this.</h4>
             <h4 style="color: midnightblue;">Helpful links to TED-ED talks discussing these inequalities can be reached through<a href="links.html"> this </a>link.</h4>
@@ -31,5 +35,4 @@
               <footer> &copy; Lujaina Eldelebshany 2021</footer>
     </body>
 </html>
-
 
