--- a/founder.html
+++ b/founder.html
@@ -5,8 +5,33 @@
         @import url('https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&family=Dancing+Script&display=swap');
         </style>
         <title>Founder</title
+
+
+        <link rel="apple-touch-icon-precomposed" sizes="57x57" href="favicon/favicomatic/apple-touch-icon-57x57.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="favicon/favicomatic/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="favicon/favicomatic/apple-touch-icon-72x72.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="favicon/favicomatic/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="favicon/favicomatic/apple-touch-icon-60x60.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="favicon/favicomatic/apple-touch-icon-120x120.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="favicon/favicomatic/apple-touch-icon-76x76.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="favicon/favicomatic/apple-touch-icon-152x152.png" />
+    <link rel="icon" type="image/png" href="favicon/favicomatic/favicon-196x196.png" sizes="196x196" />
+    <link rel="icon" type="image/png" href="favicon/favicomatic/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/png" href="favicon/favicomatic/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="favicon/favicomatic/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="favicon/favicomatic/favicon-128.png" sizes="128x128" />
+    <meta name="application-name" content="Founder"/>
+    <meta name="msapplication-TileColor" content="#FFFFFF" />
+    <meta name="msapplication-TileImage" content="favicon/favicomatic/mstile-144x144.png" />
+    <meta name="msapplication-square70x70logo" content="favicon/favicomatic/mstile-70x70.png" />
+    <meta name="msapplication-square150x150logo" content="favicon/favicomatic/mstile-150x150.png" />
+    <meta name="msapplication-wide310x150logo" content="favicon/favicomatic/mstile-310x150.png" />
+    <meta name="msapplication-square310x310logo" content="favicon/favicomatic/mstile-310x310.png" />
+
+
+
     </head>
-    <h4 style="text-align: left;"><a href="index.html">Back</a></h4>
+    <h4 style="text-align: left;"><a href="indexing.html">Back to main</a></h4>
     <body style="text-align: center; font-family: Times New Roman; background-image: url('backdrop.jpg'); background-repeat: no-repeat; background-position: center center; background-size: cover; background-attachment: fixed;">
 
 <h1 style="color: #410d00;">About ME</h1>
@@ -33,7 +58,6 @@ breaking stereotypes around women. </h3>
     </ul>
 </i></p>
 </section>
-
 
 
     <img src="sp1.jpg" alt="A picture of my work. You are experiencing a loading error, please stand by and check connection" style="padding-left: 85px; float: left; height: 15em; margin-right: 1%; margin-bottom: 0.5em;">
