--- a/gallery.html
+++ b/gallery.html
@@ -31,7 +31,7 @@
 
     </style>
 
-    <h4 style="text-align: left;"><a href="indexing.html">Back to main</a></h4>
+    <h4 style="text-align: left;"><a href="index.html">Back to main</a></h4>
     <body style="text-align: center; font-family: times new roman; background-color: lavender">
         <h1 style="color: goldenrod;"> GALLERY OF INSPIRATION- How Women have Changed the World </h1>
         <hr> <hr>
