--- a/founder.html
+++ b/founder.html
@@ -45,7 +45,7 @@ have to suffer simply because of their gender and what to do to combat these
 stereotypes, give insight into what toxic masculinity is and how that plays a role
 in suppressing women, and how women is STEM are the ground-breaking future of
 breaking stereotypes around women. </h3>
-<img style="width: 250px; length: 250px;" src="me.jpg" alt="Please stand by as you experience a loading error">
+<img style="width: 250px; length: 250px;" src="Pictures/me.jpg" alt="Please stand by as you experience a loading error">
 <section>
 <h2 style="color: maroon;">A Bit about Myself Personally</h2>
 <p style="font-size: 20px; color: darkslategray;"><i>
@@ -60,10 +60,10 @@ breaking stereotypes around women. </h3>
 </section>
 
 
-    <img src="sp1.jpg" alt="A picture of my work. You are experiencing a loading error, please stand by and check connection" style="padding-left: 85px; float: left; height: 15em; margin-right: 1%; margin-bottom: 0.5em;">
-    <img src="sp2.jpg" alt="Please stand by and check connection" style="float: left; height: 15em; margin-right: 1%; margin-bottom: 0.5em;">
-    <img src="sp3.JPG" alt="Please stand by and check connection" style="float: left; height: 15em; margin-right: 1%; margin-bottom: 0.5em;">
-    <img src="sp4.jpg" alt="Please stand by and check connection" style="float: left; height: 15em; margin-right: 1%; margin-bottom: 0.5em;">
+    <img src="Pictures/sp1.jpg" alt="A picture of my work. You are experiencing a loading error, please stand by and check connection" style="padding-left: 85px; float: left; height: 15em; margin-right: 1%; margin-bottom: 0.5em;">
+    <img src="Pictures/sp2.jpg" alt="Please stand by and check connection" style="float: left; height: 15em; margin-right: 1%; margin-bottom: 0.5em;">
+    <img src="Pictures/sp3.JPG" alt="Please stand by and check connection" style="float: left; height: 15em; margin-right: 1%; margin-bottom: 0.5em;">
+    <img src="Pictures/sp4.jpg" alt="Please stand by and check connection" style="float: left; height: 15em; margin-right: 1%; margin-bottom: 0.5em;">
 
 <!-- <p>Cairo, Egypt</p>  -->
 <!-- <p>WHitefish, USA</p> -->
@@ -78,13 +78,13 @@ provide some perspective from a seemingly normal moment in the peaceful evening 
 
 <section>
 
-<a href="https://www.linkedin.com/in/lujaina-eldelebshany-0029bb1b3/"> <img alt="error-code.jpg" src="linkedin_logo.png"
+<a href="https://www.linkedin.com/in/lujaina-eldelebshany-0029bb1b3/"> <img alt="Pictures/error-code.jpg" src="Pictures/linkedin_logo.png"
          width=30" height="30">
       </a>
-<a href="https://github.com/Lujaina-E"> <img alt="error-code.jpg" src="github.png"
+<a href="https://github.com/Lujaina-E"> <img alt="Pictures/error-code.jpg" src="Pictures/github.png"
          width=30" height="30">
 
-<a href="https://substack.com/profile/24893981-lujaina-eldelebshany"> <img alt="error-code.jpg" src="substack_logo.png"
+<a href="https://substack.com/profile/24893981-lujaina-eldelebshany"> <img alt="Pictures/error-code.jpg" src="Pictures/substack_logo.png"
          width=30" height="30">
 
       </a>
