--- a/index.html
+++ b/index.html
@@ -5,7 +5,29 @@
         <style>
         @import url('https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&display=swap');
         </style>
-        <title>indexing</title>
+        <title>Index</title>
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="favicon/favicomatic/apple-touch-icon-57x57.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="favicon/favicomatic/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="favicon/favicomatic/apple-touch-icon-72x72.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="favicon/favicomatic/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="favicon/favicomatic/apple-touch-icon-60x60.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="favicon/favicomatic/apple-touch-icon-120x120.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="favicon/favicomatic/apple-touch-icon-76x76.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="favicon/favicomatic/apple-touch-icon-152x152.png" />
+    <link rel="icon" type="image/png" href="favicon/favicomatic/favicon-196x196.png" sizes="196x196" />
+    <link rel="icon" type="image/png" href="favicon/favicomatic/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/png" href="favicon/favicomatic/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="favicon/favicomatic/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="favicon/favicomatic/favicon-128.png" sizes="128x128" />
+    <meta name="application-name" content="Index"/>
+    <meta name="msapplication-TileColor" content="#FFFFFF" />
+    <meta name="msapplication-TileImage" content="favicon/favicomatic/mstile-144x144.png" />
+    <meta name="msapplication-square70x70logo" content="favicon/favicomatic/mstile-70x70.png" />
+    <meta name="msapplication-square150x150logo" content="favicon/favicomatic/mstile-150x150.png" />
+    <meta name="msapplication-wide310x150logo" content="favicon/favicomatic/mstile-310x150.png" />
+    <meta name="msapplication-square310x310logo" content="favicon/favicomatic/mstile-310x310.png" />
+
+
     </head>
     <body style="font-family: 'Times New Roman', cursive; text-align: center; font-family: Times New Roman; background-image: url('backdrop.jpg'); background-repeat: no-repeat; background-position: center center; background-size: cover; background-attachment: fixed;">
 
