--- a/links.html
+++ b/links.html
@@ -2,9 +2,7 @@
 <html lang="en">
     <head>
         <link rel = "stylesheet" type = "text/css" href = "/html/linksStyling.css"> <!-- change inline styling to CSSfile after edits are made to HTML -->
-        <title>
-            Helpful Links
-        </title>
+        <title>Helpful Links</title>
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="favicon/favicomatic/apple-touch-icon-57x57.png" />
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="favicon/favicomatic/apple-touch-icon-114x114.png" />
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="favicon/favicomatic/apple-touch-icon-72x72.png" />
