--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 
 
     </head>
-    <body style="font-family: 'Times New Roman', cursive; text-align: center; font-family: Times New Roman; background-image: url('backdrop.jpg'); background-repeat: no-repeat; background-position: center center; background-size: cover; background-attachment: fixed;">
+    <body style="font-family: 'Times New Roman', cursive; text-align: center; font-family: Times New Roman; background-image: url('Pictures/backdrop.jpg'); background-repeat: no-repeat; background-position: center center; background-size: cover; background-attachment: fixed;">
 
 
         <h1 style="color: #fdc4c4; font-family: 'Akaya Kanadaka', cursive;">Gender Setbacks</h1> <hr> <hr>
-        <img style="width: 300px; length: 300px;"src="fem.jpg" alt="Please stand by and restart the page while you experience this error.">
+        <img style="width: 300px; length: 300px;"src="Pictures/fem.jpg" alt="Please stand by and restart the page while you experience this error.">
         <div class="alert alert-primary" role="alert">Check out the links at the bottom of this page!</div>
 
             <main>
@@ -46,7 +46,7 @@
                 what women should and shouldn't do.</h3></b>
             </section>
 
-            <img style="width: 300px; length: 300px;" src="fem.jpg" alt="Loading error, please stand by and check connection">
+            <img style="width: 300px; length: 300px;" src="Pictures/fem.jpg" alt="Loading error, please stand by and check connection">
             <h4 style="color: midnightblue;">Who AM I? Please click <a href="founder.html"> here </a> to learn more about me and why I chose to do this.</h4>
             <h4 style="color: midnightblue;">Helpful links to TED-ED talks discussing these inequalities can be reached through<a href="links.html"> this </a>link.</h4>
             <h4 style="color: midnightblue;">Click <a href="gendernorms.html">here</a> to see what I have to say about gender norms.</h4>
