--- a/gallery.html
+++ b/gallery.html
@@ -59,7 +59,7 @@
         <h1 style="color: goldenrod;"> GALLERY OF INSPIRATION- How Women have Changed the World </h1>
         <hr> <hr>
         <h3 style="color: indianred;">DR. MERRITT MOORE</h3> <hr>
-        <img style="width: 300px; length: 300px;" src="merritt.jpg" alt="A picture of Dr. Merritt Moore">
+        <img style="width: 300px; length: 300px;" src="Pictures/merritt.jpg" alt="A picture of Dr. Merritt Moore">
         <p>A "quantum ballerina" as she calls herself, Dr. Merritt Moore shattered steroetypes in the
         scientific world by pursuing both her passions: quantum physics as well as pursuing
         profesional ballet. After studying Physics at Harvard University and graduating with honours,
@@ -73,7 +73,7 @@
         accomplsih if she sets her mind to what her passions truly are, at heart. On Instagram, she
         can be reached at @PhysicsonPointe </p>
         <h3 style="color: indianred;">MALALA YOUSAFZAI</h3><hr>
-        <img style="width: 300px; length: 300px;" src="malala.jpg" alt="A picture of Malala Yousafzai">
+        <img style="width: 300px; length: 300px;" src="Pictures/malala.jpg" alt="A picture of Malala Yousafzai">
         <p>As the story is well known, Malala stood up on a bus to actively protest against a taliban
         that demanded children couldn't be educated. Her survival of this assasination attempt when they
         shot her and her refusal to give up on the topic of children's education as a basic human right
@@ -83,7 +83,7 @@
         taught not only young girls, but everyone around the world, that age is simply no excuse to tackle
         on the issues of this world. She can be reached on Instagram at @malala </p>
         <h3 style="color: indianred;">GRETA THUNBERG</h3><hr>
-        <img style="width: 300px; length: 300px;" src="greta.jpg" alt="A picture of Greta Thunberg">
+        <img style="width: 300px; length: 300px;" src="Pictures/greta.jpg" alt="A picture of Greta Thunberg">
         <p>A mere 17 year old Swedith activist, Greta Thunberg inspired and brought forth much of the global
         issues surrounding climate change to light, earning herself the Right Livelihood award, also known as
         the alternate Nobel Peace Prizem and other prestigious awards. Having addressed the UN on the topic
@@ -97,7 +97,7 @@
         change in the worldwill be rewarded with promising results. She can be reached on Instagram through her
         account @gretathunberg</p>
         <h3 style="color: indianred;">MARIE CURIE </h3><hr>
-        <img style="width: 300px; length: 300px;" src="marie_curie.jpg" alt="A phto of Madame Marie Curie">
+        <img style="width: 300px; length: 300px;" src="Pictures/marie_curie.jpg" alt="A phto of Madame Marie Curie">
         <p>Taking a delve into history, Madame Curie spent her life working with radioactive chemicals, and
         unfortunately died too young. A two-time winner of the Nobel Peace Prize for her work in Physics and
         Chemistry, Curie was the first single woamn to win a Nobel Prize, not to mention the only woman to
@@ -113,7 +113,7 @@
         nothing stands in the way of you and your dreams, and women are no less capable than men in the
         stream of STEM.</p>
         <h3 style="color: indianred;">WHITNEY WOLFE</h3><hr>
-        <img style="width: 300px; length: 300px;" src="whitney.jpg" alt="A phto of whitney wolfe">
+        <img style="width: 300px; length: 300px;" src="Pictures/whitney.jpg" alt="A phto of whitney wolfe">
         <p>After her dissatisfaction with Tinder after she was sexually haraassed while holding the title of
         Vice President of Marketing with the compnay, Whitney sued the company for discrimination and turned to
         entrepreneurship to satisfy the vision that she had for an online dating application and company, which
@@ -128,7 +128,7 @@
         we do not need a man to reach her envisionment of a better world. Women have a voice, and they can
         contribute themselves to society. She can be reached on Instagram @whitney</p>
         <h3 style="color: indianred;">PRINCESS DIANA</h3><hr>
-        <img style="width: 300px; length: 300px;" src="diana.jpg" alt="A phto of the late princess">
+        <img style="width: 300px; length: 300px;" src="Pictures/diana.jpg" alt="A phto of the late princess">
         <p>Unlike the rest of these inspirations, the late Princess Diana didn't build her way up to entrepreneurial
         success, and the wasnt a wonder in sny of the STEM fields...but the reason thatis up on the gallery is that
         she held true to her values during her lifetime, even as a member of the royal family, and she pursued what
