--- a/gendernorms.html
+++ b/gendernorms.html
@@ -28,8 +28,8 @@
     <h4 style="text-align: left;"><a href="index.html">Back</a></h4>
     <body style="font-family: Times New Roman; text-align: center; background-color: lavenderblush;">
         <h1 style="color: mediumslateblue;">GENDER NORMS-ANCIENT INEQUALITY</h1>
-            <img style="width: 300px; length: 300px;"src="ballerina.jpg" alt="Please stand by and restart the page while you experience this error.">
-            <img style="width: 300px; length: 300px;"src="hands.jpg" alt="Please stand by and restart the page while you experience this error.">
+            <img style="width: 300px; length: 300px;"src="Pictures/ballerina.jpg" alt="Please stand by and restart the page while you experience this error.">
+            <img style="width: 300px; length: 300px;"src="Pictures/hands.jpg" alt="Please stand by and restart the page while you experience this error.">
 
             <h2 style="color:darkolivegreen;">What ARE gender norms? And why do they exist?</h2>
                 <p><b>Gender norms</b> are stereotypes surrounding what a man or women typically is supposed to, or is entitled to do. As defined by the free Dictionary, gender norms are "the
