--- a/links.html
+++ b/links.html
@@ -29,7 +29,7 @@
     <h4 style="text-align: left;"><a href="index.html">Back</a></h4>
     <body style="background-color: oldlace; text-align: center;">
     <h1 style="color: skyblue;"> Here are a bunch of links to helpful TED-Ed talks that further discuss these very pressing issues!</h1> <hr>
-    <img style ="width: 450px; length: 450px;"src="women.jpg" alt="Please stand by. Your computer is experiencing some loading issues, refresh the page and retry">
+    <img style ="width: 450px; length: 450px;"src="Pictures/women.jpg" alt="Please stand by. Your computer is experiencing some loading issues, refresh the page and retry">
     <h2 style="color:lightseagreen;">Check these out if you have the time and/or you're interested in learning past what this website offers you!</h2>
     <p style="color: darkslategray;">
         This link puts the question out here and discusses the question that at least most of us on this website have thought abot once or twice: is
@@ -99,5 +99,5 @@
     <hr>
     <p style:"colour:black; font: timesNewRoman; text-align: center;"> All videos are sourced from TEDEd</p>
     </body>
-<img style="width: 50px; length: 50px;"src="ted.jpg" alt="Loading error, please stand by and check connection">
+<img style="width: 50px; length: 50px;"src="Pictures/ted.jpg" alt="Loading error, please stand by and check connection">
 </html>
