--- a/masculinity.html
+++ b/masculinity.html
@@ -58,6 +58,6 @@
         <h4> Click <a href="https://www.youtube.com/watch?time_continue=22&v=Cetg4gu0oQQ&feature=emb_title">here</a> to view a comprehensive video on Ted-Ed dicussing toxic masculinity.</h4>
         <h4> Click <a href="https://www.youtube.com/watch?v=SLOTHP_eoAY">here</a> to learn more about what toxic masculinity is and why it's really considered 'toxic.'</h4>
         <h4> Click <a href="https://www.youtube.com/watch?v=4zhQy14CHsg&feature=emb_title">here</a> to see how toxic masculinity affects en so deeply, hopefully helping you understand why it's such an important issue to address alonsgide feminism.</h4>
-        <img style="width: 50px; length: 50px;" src="ted.jpg" alt="please stand by as you experience an error.">
+        <img style="width: 50px; length: 50px;" src="Pictures/ted.jpg" alt="please stand by as you experience an error.">
     </body>
 </html>
