--- a/founder.html
+++ b/founder.html
@@ -62,7 +62,7 @@ breaking stereotypes around women. </h3>
 
     <img src="Pictures/sp1.jpg" alt="A picture of my work. You are experiencing a loading error, please stand by and check connection" style="padding-left: 85px; float: left; height: 15em; margin-right: 1%; margin-bottom: 0.5em;">
     <img src="Pictures/sp2.jpg" alt="Please stand by and check connection" style="float: left; height: 15em; margin-right: 1%; margin-bottom: 0.5em;">
-    <img src="Pictures/sp3.JPG" alt="Please stand by and check connection" style="float: left; height: 15em; margin-right: 1%; margin-bottom: 0.5em;">
+    <img src="Pictures/sp3.jpg" alt="Please stand by and check connection" style="float: left; height: 15em; margin-right: 1%; margin-bottom: 0.5em;">
     <img src="Pictures/sp4.jpg" alt="Please stand by and check connection" style="float: left; height: 15em; margin-right: 1%; margin-bottom: 0.5em;">
 
 <!-- <p>Cairo, Egypt</p>  -->
