--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <style>
         @import url('https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&display=swap');
         </style>
+        <link rel="stylesheet" type="text/css" href="indexStyle.css"/>
         <title>Index</title>
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="favicon/favicomatic/apple-touch-icon-57x57.png" />
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="favicon/favicomatic/apple-touch-icon-114x114.png" />
