--- a/founder.html
+++ b/founder.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&family=Dancing+Script&display=swap');
+        </style>
+        <link rel="stylesheet" type="text/css" href="founderStyle.css"/>
         <title>Founder</title
 
 
