--- a/founder.html
+++ b/founder.html
@@ -58,7 +58,7 @@ breaking stereotypes around women. </h3>
 </i></p>
 </section>
         
-    <img class="photography, photo1" src="Pictures/sp1.jpg" alt="A picture of my work. You are experiencing a loading error, please stand by and check connection">
+    <img class="photography photo1" src="Pictures/sp1.jpg" alt="A picture of my work. You are experiencing a loading error, please stand by and check connection">
     <img class="photography" src="Pictures/sp2.jpg" alt="Please stand by and check connection">
     <img class="photography" src="Pictures/sp3.jpg" alt="Please stand by and check connection">
     <img class="photography" src="Pictures/sp4.jpg" alt="Please stand by and check connection">
