--- a/founder.html
+++ b/founder.html
@@ -29,6 +29,8 @@
     <meta name="msapplication-wide310x150logo" content="favicon/favicomatic/mstile-310x150.png" />
     <meta name="msapplication-square310x310logo" content="favicon/favicomatic/mstile-310x310.png" />
 
+            
+            <!-- This h4 element will stay with inline styling because it will be replaced by a navbar. -->
     </head>
     <h4 style="text-align: left;"> <a href="index.html">Back to main</a></h4>
     <body>
