--- a/founder.html
+++ b/founder.html
@@ -70,9 +70,8 @@ breaking stereotypes around women. </h3>
 <!-- <p>Vancouver, Tofino</p> -->
 <!-- <p>Tofino, Tofino</p> -->
 
-
- <p style="clear: both;">
-<p style="font-size: 16px;">The first photo was taken in Cairo, Egypt, at the sunset form a neighbourhood compound. It captures the subtly calming and cozy energy. I especially like this
+<!-- <p style=""> -->
+<p style="clear: both; font-size: 16px;">The first photo was taken in Cairo, Egypt, at the sunset form a neighbourhood compound. It captures the subtly calming and cozy energy. I especially like this
 photo because as a country in the Middle East, it is often overlooked as a contribution to global poverty. I think it is important to capture the life that Egypt actually is, and to, again,
 provide some perspective from a seemingly normal moment in the peaceful evening to those who seem to be fixated on their image of my home country. </p>
 
