--- a/gallery.html
+++ b/gallery.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>gallery</title>
+        <link rel="stylesheet" type="text/css" href="galleryStyle.css"/>
 
         <link rel="apple-touch-icon-precomposed" sizes="57x57" href="favicon/favicomatic/apple-touch-icon-57x57.png" />
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="favicon/favicomatic/apple-touch-icon-114x114.png" />
