--- a/gendernorms.html
+++ b/gendernorms.html
@@ -2,14 +2,21 @@
 <html lang="en">
     <head>
         <title>gendernorms</title>
+        <style>
+            <link rel="stylesheet" type="text/css" href="gendernormsStyle.css"/>
+        </style>   
     </head>
-    <h4 style="text-align: left;"><a href="index.html">Back</a></h4>
-    <body style="font-family: Times New Roman; text-align: center; background-color: lavenderblush;">
-        <h1 style="color: mediumslateblue;">GENDER NORMS-ANCIENT INEQUALITY</h1>
-            <img style="width: 300px; length: 300px;"src="Pictures/ballerina.jpg" alt="Please stand by and restart the page while you experience this error.">
-            <img style="width: 300px; length: 300px;"src="Pictures/hands.jpg" alt="Please stand by and restart the page while you experience this error.">
+    
+    
+    <!--  Will be styled later due to the navbar -->
+    <h4 style="text-align: left;"><a href="index.html">Back to Main </a></h4>
 
-            <h2 style="color:darkolivegreen;">What ARE gender norms? And why do they exist?</h2>
+    <body>
+        <h1 id="pageTitle">GENDER NORMS-ANCIENT INEQUALITY</h1>
+            <img id="photoID" src="Pictures/ballerina.jpg" alt="Please stand by and restart the page while you experience this error.">
+            <img id="photoID" src="Pictures/hands.jpg" alt="Please stand by and restart the page while you experience this error.">
+
+            <h2 class="heads">What ARE gender norms? And why do they exist?</h2>
                 <p><b>Gender norms</b> are stereotypes surrounding what a man or women typically is supposed to, or is entitled to do. As defined by the free Dictionary, gender norms are "the
                 overtexpression of attitudes that indicate to others the degree of your maleness or femaleness " in today's spciety based on tradition. Simply, the fact that pink is for girls
                 and blue is for boys are gender norms, and that women are expected to stay in the house and clean while men go out and work for the family's wealth. ALthough those may obviosuly
@@ -19,7 +26,7 @@
                 dating all the way back to Greek and Roman civilizations, when woman would stay at home and tend to the house and children and men would be allowed to leave the house to go to
                 their jobs, enjoy activities for leisure, and to voice political concerns. These norms have been passed down from one generation to the next, through cultures and religions, until
                 it naturally came to every generation that there are certain roles for a woman and a man to fulfill, and these rules cannot be bent.</p>
-            <h2 style="color:darkolivegreen;"> How are these gender norms detrimental to our society?</h2>
+            <h2 class="heads"> How are these gender norms detrimental to our society?</h2>
                 <p>The reason that gender norms are such a huge conlfict when discussing equalism in today's world is that those gender norms and <U>OUTDATED</U> stereotypes have become the new normal
                 and the constant belittiling of women in society is something that isn't a new idea; this traditional beleief is somehing that everyone's brains are wired to. Women cannot expect to
                 make a change in this world while being viewed as equal to man when everyone's idea of women is tinted ever so differently due to those gender norms. It is so important for girls
@@ -32,7 +39,7 @@
                 constantly have more advancements in the field, this can only mean that they do not want women to have succeses because they beleive that their are more worthy than a women and they are scared
                 that a women could actually be more innovative and thoughtful than them, which only hurts their ago because again, of that unpsoken but known gender norm that <b>a women cannot be better than
                 you as a man</b>. As well, decisions made in society are engineered to maintain this system of patriarchy, where women are constantly beng pushed into the limiting space  that is women stereotypes.</p>
-            <h2 style="color:darkolivegreen;">What can we do about these gender norms to fix the problem?</h2>
+            <h2 class="heads">What can we do about these gender norms to fix the problem?</h2>
                 <p>The solution to this problem comes from focussing on female leaders and female successes in the world of politics, STEM, medicine, and other humanitarian endeavours as a short term solution
                 to inspire other women in today's society that the world isn't completely shtting them out, and all it takes is their own passion and someone who is filling to fight their way to the top in order
                 to succeed. Sure, there will be struggles and there will be men who are terrfied of having a women surpass them in success, as the stereotype told them that they are, by default, more honourable than
@@ -40,7 +47,7 @@
                 focusses on the indivdual's thoughts and potential rather than whether they are a boy or a girl will help eradicate this demeaning way of thinking and bring forth a generation that is completely cleaned of
                 constant pursuit and satisfaction of gender norms.</p>
 
-    <i style="font-size: 33px; color: teal;">The only fear a women can have from success is one that society pressured her to instill on herself.
+    <i>The only fear a women can have from success is one that society pressured her to instill on herself.
                -Lujaina Eldelebshany</i>
     </body>
 </html>
